[package]
name = "bevy_template"
edition = "2024"

[profile.dev]
opt-level = 0
strip = 'debuginfo'

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.web.package."*"]
opt-level = "s"

[profile.web]
inherits = "dev"
opt-level = 0
strip = 'debuginfo'

[profile.web-release]
inherits = "release"
opt-level = "s"
lto = true

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]
web-audio = ["dep:firewheel-web-audio"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "animation",
  "async_executor",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_input_focus",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "std",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
] }
bevy_optix = { path = "bevy_optix" }
bevy_pretty_text = { path = "bevy_pretty_text" }
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
bevy_sequence = { path = "bevy_sequence" }
bevy_seedling = { path = "bevy_seedling" }
webbrowser = { version = "1", features = ["hardened"] }
rand = "0.8"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
avian2d = "0.3"
bevy_asset_loader = { version = "0.23.0" }
bevy_tween = "0.8.0"
bevy_enhanced_input = "0.11"
serde = "1.0.219"
bevy_light_2d = "0.6.0"

firewheel-web-audio = { version = "0.1.0", optional = true }

# bevy_egui = "0.34.1"
# bevy-inspector-egui = "0.31.0"

[build-dependencies]
embed-resource = "1"
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
